[gd_scene load_steps=2 format=3 uid="uid://0qliln2pnirn"]

[ext_resource type="Script" path="res://InterfaceUtilisateur/pausemenu.gd" id="1_2cj61"]

[node name="pausemenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2cj61")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -210.0
offset_right = 180.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Pause"
horizontal_alignment = 1

[node name="Continuer" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Continuer"

[node name="Recommencer" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Recommencer"

[node name="Option" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Option"

[node name="Quitter" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quitter"

[connection signal="pressed" from="Panel/VBoxContainer/Continuer" to="." method="_on_continuer_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Recommencer" to="." method="_on_recommencer_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quitter" to="." method="_on_quitter_pressed"]
